--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -1,5 +1,5 @@
 {
-  "header": "作品集",
+  "header": "作品集サイト",
   "navigation_menu": {
     "about_me": "僕について",
     "projects": "プロジェクト"
@@ -8,9 +8,9 @@
     "part1":"はじめまして、アリオーラ・ジェラードです。僕の作品集サイトへようこそ！プロジェクトを鑑賞していただきありがとうございます。"
   },
   "project_titles": {
-    "Neon_Skyline": "ネオンス・カイライン",
     "PoiPoi": "ポイポイ",
     "Bug_Off": "バッグ・オフ",
-    "My_Video_Game_Collection": "マイ・ゲーム・コレクション"
+    "My_Video_Game_Collection": "マイ・ゲーム・コレクション",
+    "Neon_Skyline": "ネオンス・カイライン"
   }
 }
