--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -5,7 +5,12 @@
     "projects": "プロジェクト"
   },
   "introduction": {
-    "part1":"はじめまして、アリオーラ・ジェラードです。僕の作品集サイトへようこそ！プロジェクトを鑑賞していただきありがとうございます。"
+    "part_1":"はじめまして、アリオーラ・ジェラードです。僕の作品集サイトへようこそ！プロジェクトを鑑賞していただきありがとうございます。"
+  },
+  "about_me": {
+    "part_1": "アメリカのジョージア州のアトランタ市から来たソフトエンジニアです。音楽を聴くこと、ドラムを弾くこと、ゲーム、ボルダリングなどが趣味を持っています。高校時代にJavaのプログラミング言語を使用しプログラミングに関心を初めて抱きました。自分のコードで課題を解く満足を感じこと、さらにゲームに熱心に取り組みたい意志を持ちつつ、大学でゲーム設計開発を専攻しました。",
+    "part_2":"日本のゲームの魅力を感じ、日本のゲーム会社で働くことを決意しました。はじめにJETプログラムに参加し、英語教師として働きました。この5年間に、日本の文化や日本語などについて深く理解することにしました。それをしつつ、プログラミングも続けました。プログラミングの技術を上達させるため、C++とJavascriptまたはTypescriptを学び、その知識を活かせてこのサイトで発表される作品を実装しました。Javascriptを学ぶことでソフトウェアエンジニアリング分野への道が開けました。これからもこの進化続けている分野をもっと学び、自分のスキルを活かせ続けたいと思っています。",
+    "closing": "この作品集をご覧いただきありがとうございます。ご連絡を興味ある方はLinkedInまたはメールお願いします。お待ちしております。"
   },
   "project_titles": {
     "PoiPoi": "ポイポイ",
