chore: edit translations for portfolio

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-  "header": "My Portfolio Website",
+  "header": "Portfolio",
   "navigation_menu": {
     "about_me": "About Me",
     "projects": "Projects"
