--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,5 +20,27 @@
     "Bug_Off": "Bug-Off",
     "My_Video_Game_Collection": "My Video Game Collection",
     "Neon_Skyline": "Neon Skyline"
+  },
+  "projects": {
+    "PoiPoi": {
+      "title": "PoiPoi",
+      "description": "A mobile-first web game that challenge players to identify locations within Tokyo using visual cues from carefully curated images"
+    },
+    "Bug_Off": {
+      "title": "Bug-Off",
+      "description": "A simple game created for an Itch.io GameJam. The user acts as a bug in a game with the goal to frustrate the hero into quitting the game."      
+    },
+    "My_Video_Game_Collection": {
+      "title": "My Video Game Collection",
+      "description": "A web application designed for the purpose of cataloging information pertaining to video games the user has experienced, wants to experience, or are presently engaged with."
+    },
+    "Neon_Skyline": {
+      "title": "Neon Skyline",
+      "description": "A hover car racing game featuring a story mode following the ex-racer Adam Reeds and an arcade mode where users can drive on procedurally generate tracks for endless fun."
+    }
   }
+    
+  
+  
+
 }
