--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -15,19 +15,19 @@
   "projects": {
     "PoiPoi": {
       "title": "ポイポイ",
-      "description": "翻訳中"
+      "description": "丁寧に監修された視覚的なヒントを用いて、プレーヤーが東京都内のスポットを探索するモバイル用のウェブゲーム。"
     },
     "Bug_Off": {
       "title": "バッグ・オフ",
-      "description": "翻訳中"      
+      "description": "Itch.ioのGameJamのために作成したゲーム。ユーザーはゲーム内のバグとして、登場人物がゲームを辞めたくなるような振る舞いを行う。"
     },
     "My_Video_Game_Collection": {
       "title": "マイ・ゲーム・コレクション",
-      "description": "翻訳中"
+      "description": "ユーザーがプレイしたことのある、したいと思っている、または現在プレイ中のゲームを記録するためのウェブアプリケーション。"
     },
     "Neon_Skyline": {
       "title": "ネオンス・カイライン",
-      "description": "翻訳中"
+      "description": "エアカーレーシングゲーム。元レーサー・アダムリーズとして進む物語と、フリーモードで生成されるレースコースで飽きることなく楽しめる点が特徴。"
     }
   }
 }
