fix: fix Neon Skyline Japanese title

--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -26,7 +26,7 @@
       "description": "ユーザーがプレイしたことのある、したいと思っている、または現在プレイ中のゲームを記録するためのウェブアプリケーション。"
     },
     "Neon_Skyline": {
-      "title": "ネオンス・カイライン",
+      "title": "ネオン・スカイライン",
       "description": "エアカーレーシングゲーム。元レーサー・アダムリーズとして進む物語と、フリーモードで生成されるレースコースで飽きることなく楽しめる点が特徴。"
     }
   }
