feat: add contact me translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -32,9 +32,6 @@
       "title": "Neon Skyline",
       "description": "A hover car racing game featuring a story mode following the ex-racer Adam Reeds and an arcade mode where users can drive on procedurally generated tracks for endless fun."
     }
-  }
-    
-  
-  
-
+  },
+  "contact_me": "Contact Me"
 }
