--- a/public/locales/jp/translation.json
+++ b/public/locales/jp/translation.json
@@ -29,5 +29,6 @@
       "title": "ネオン・スカイライン",
       "description": "エアカーレーシングゲーム。元レーサー・アダムリーズとして進む物語と、フリーモードで生成されるレースコースで飽きることなく楽しめる点が特徴。"
     }
-  }
+  },
+  "contact_me": "連絡方法"
 }
